Chapter 1, section 1 finished.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{book}
 
 % Essential
-\usepackage[dutch]{babel}
+\usepackage[USenglish,english,american]{babel}
 \usepackage{titling}
 
 % Optional
@@ -17,9 +17,9 @@
 \usepackage{subfiles}
 \usepackage{framed}
 \usepackage[strict]{changepage}
-
-\usepackage[printwatermark]{xwatermark}
-\newwatermark[allpages,color=gray!50,angle=45,scale=3,xpos=0,ypos=0]{DRAFT}
+\usepackage{tabularx}
+%\usepackage[printwatermark]{xwatermark}
+%\newwatermark[allpages,color=gray!50,angle=45,scale=3,xpos=0,ypos=0]{DRAFT}
 
 
 % Titleplage
@@ -55,9 +55,9 @@
 }
 
 % Personal Preferences
-%\setlength\parindent{0pt}
+\setlength\parindent{0pt}
 
-%\newcommand{\imageSrc}{images/}
+\newcommand{\imageSrc}{images/}
 %\newcommand{\codeSrc}{code/}
 
 
@@ -84,6 +84,8 @@
 {%
   \vspace{2pt}\end{adjustwidth}\endMakeFramed%
 }
+
+
 
 \begin{document}
 
