Working on RTOS

--- a/main.tex
+++ b/main.tex
@@ -58,8 +58,7 @@
 \setlength\parindent{0pt}
 
 \newcommand{\imageSrc}{images/}
-%\newcommand{\codeSrc}{code/}
-
+\newcommand{\codeSrc}{code/}
 
 % Theorem styles
 \theoremstyle{definition}
