Minor fixed. Chapter 6 added.

--- a/main.tex
+++ b/main.tex
@@ -99,6 +99,10 @@
 \mainmatter
 
 \subfile{chapters/chapter1}
+\subfile{chapters/chapter2}
+\subfile{chapters/chapter3}
+\subfile{chapters/chapter4}
+\subfile{chapters/chapter5}
 
 % Appendix
 \appendix 
