Chapter 6 added to main.tex

--- a/main.tex
+++ b/main.tex
@@ -103,6 +103,7 @@
 \subfile{chapters/chapter3}
 \subfile{chapters/chapter4}
 \subfile{chapters/chapter5}
+\subfile{chapters/chapter6}
 
 % Appendix
 \appendix 
