--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,9 @@
 % Ensures an index is made.
 \makeindex
 
+% add an indexed value and put it in bold.
+\newcommand{\indexb}[1]{\textbf{#1}\index{#1}}
+
 % Theorem Styles
 \theoremstyle{definition}
 \newtheorem{asmdefn}{Definition}[section]
