Added package to add index to table of contents.

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{tabularx}
 \usepackage{mdframed}
 \usepackage{makeidx}
+\usepackage[totoc]{idxlayout} % Package to add index to table of contents.
 
 %\usepackage[printwatermark]{xwatermark}
 %\newwatermark[allpages,color=gray!50,angle=45,scale=3,xpos=0,ypos=0]{DRAFT}
