--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,7 @@
 % Table of Contents Page
 \tableofcontents
 
+\newpage
 \subfile{preface}
 
 \mainmatter
@@ -158,12 +159,14 @@
 % Appendix
 \appendix
 
+\backmatter
+
 % Index
 \printindex
 
 % References
 \bibliographystyle{plain}
-\bibliography{references}
+\bibliography{main}
 \nocite{*}
 
 \end{document}
