Fix for \defineabrv and some additons for chp 4/5.

--- a/main.tex
+++ b/main.tex
@@ -87,9 +87,9 @@
 \makeatletter
 \newcommand*\defineabrv[2]{
   \textbf{#1} (#2)
-  \index{#2 | see {#1@\protect\protect\capitalisewords{#1} }}%
+  \index{#2 | see {\protect\capitalisewords{#1}} }%
   \index{#1@\protect\capitalisewords{#1}}%
-   }
+}
 \makeatother
 
 % Theorem Styles
