--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{book}
 
 % Essential
-\usepackage[USenglish,english,american]{babel}
+\usepackage[USenglish,american]{babel}
 \usepackage{titling}
 
 % Optional
