--- a/preface.tex
+++ b/preface.tex
@@ -5,7 +5,7 @@ The course \textbf{Software for Real-time and Embedded Systems} is part of the \
 \\\\
 This document contains a transcription of the course material found on the \textit{Foditic} website.
 \\\\
-The source of this document is located at \url{https://github.com/JDevlieghere/SORTES-Course}. We encourage future readers to contribute to the development of this document.
+The source and latest version of this document is located at \url{https://github.com/JDevlieghere/SORTES-Course}. We encourage future readers to contribute to the development of this document.
 \\\\
 This document is provided ``as is", without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement.
 In no event shall the authors be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with this document or the use or other dealings in this document.
