--- a/print.tex
+++ b/print.tex
@@ -22,6 +22,8 @@
 \usepackage{makeidx}
 \usepackage[totoc]{idxlayout}
 \usepackage{mfirstuc}
+\usepackage[margin=1cm]{geometry}
+
 
 %\usepackage[printwatermark]{xwatermark}
 %\newwatermark[allpages,color=gray!50,angle=45,scale=3,xpos=0,ypos=0]{DRAFT}
@@ -31,13 +33,6 @@
 \date{\today}
 \author{Professor Marc Lobelle \\ Jonas Devlieghere \\ Dieter Castel}
 
-% Margins
-\setlength{\topmargin}{0in}
-\setlength{\footskip}{0.5in}
-\setlength{\textwidth}{7.0in}
-\setlength{\oddsidemargin}{0in}
-\setlength{\evensidemargin}{0in}
-\setlength{\textheight}{8.9in}
 
 % Listings
 \lstset{
