--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 
 % Titleplage
 \newcommand{\theauthors}{Dieter Castel \\ Jonas Devlieghere}
-\newcommand{\thecontributors}{Wout Scheepers \\ Stefan Pante}
+\newcommand{\thecontributors}{Wout Scheepers \\ Stefan Pante \\ Jo Van Bulck}
 \newcommand{\theprofs}{Marc Lobelle}
 
 \title{Software for Real-time \& Embedded \\ Systems (B-KUL-H04L2A)}
