changed papersize from US Letter to A4.

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{book}
+\documentclass[11pt,a4paper]{book}
 
 % Essential
 \usepackage[USenglish,american]{babel}
@@ -22,7 +22,7 @@
 \usepackage{makeidx}
 \usepackage[totoc]{idxlayout}
 \usepackage{mfirstuc}
-\usepackage[margin=3cm]{geometry}
+\usepackage[margin=3cm,a4paper]{geometry}
 \usepackage{titling}
 
 
